# Scythe-Honeypot

./: README.md  pyproject.toml  requirements.txt
src/scythe_honeypot/: __main__.py  app.py  ascii_art.py  styles.tcss
src/scythe_honeypot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scythe_honeypot/core/: canary.py  canary_factory.py  canary_service.py  event.py  monitor.py
src/scythe_honeypot/screens/: home.py
src/scythe_honeypot/storage/: database.py
src/scythe_honeypot/widgets/: canaries_list.py  canaries_table.py  canary_card.py  canary_creator.py  canary_details_modal.py  confirm_modal.py  events_table.py  footer.py  header.py  last_alert.py  stats_panel.py
