[project]
name = "scythe-honeypot"
version = "0.1.0"
description = "Personal honeypot for OPSEC - part of the Scythe ecosystem"
requires-python = ">=3.12"
authors = [
    {name = "Your name"}
]
dependencies = [
    "textual>=0.85",
    "watchdog>=4.0",
    "psutil>=5.9",
    "pydantic>=2.5",
    "cryptography>=42.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"